--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<meta http-equiv="refresh" content="0; url=https://nocaoper.github.io/949_hiv_2017/output/" />
-
-<p><a href="https://nocaoper.github.io/949_hiv_2017/output/">Redirect</a></p>
-
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+				<meta http-equiv="refresh" content="0; url=https://nocaoper.github.io/949_hiv_2017/output/" />
+        <script type="text/javascript">
+            window.location.href = "0; url=https://nocaoper.github.io/949_hiv_2017/output/"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this 
+				<p><a href="https://nocaoper.github.io/949_hiv_2017/output/">Redirect</a></p>
+    </body>
+</html>
 
