--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <script type="text/javascript">
-            window.location.href = "0; url=https://nocaoper.github.io/949_hiv_2017/output/"
-        </script>
+				<!-- <meta http&#45;equiv="refresh" content="0; url=https://nocaoper.github.io/949_hiv_2017/output/" /> -->
+        <!-- <script type="text/javascript"> -->
+        <!--     window.location.href = "0; url=https://nocaoper.github.io/949_hiv_2017/output/" -->
+        <!-- </script> -->
         <title>Page Redirection</title>
     </head>
     <body>
