--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-				<!-- <meta http&#45;equiv="refresh" content="0; url=https://nocaoper.github.io/949_hiv_2017/output/" /> -->
+				<meta http-equiv="refresh" content="0; url=https://nocaoper.github.io/949_hiv_2017/output/" />
         <!-- <script type="text/javascript"> -->
         <!--     window.location.href = "0; url=https://nocaoper.github.io/949_hiv_2017/output/" -->
         <!-- </script> -->
