--- a/output/index.html
+++ b/output/index.html
@@ -275,9 +275,10 @@ compilers and add them into the conf.py file. Don't forget to commit.
 <div id="outline-container-sec-4-2" class="outline-3">
 <h3 id="sec-4-2">Error picture</h3>
 <div class="outline-text-3" id="text-4-2">
-<p>
-<a href="https:/github.com/nocaoper/949_hiv_2017/raw/master/posts/999_orgmode_with_nicola/pictureNoLocaleConfigured.png">ImageErreur</a>
-</p>
+
+<div class="figure">
+<p><img src="https://raw.githubusercontent.com/nocaoper/949_hiv_2017/master/posts/999_orgmode_with_nicola/pictureNoLocaleConfigured.png" alt="pictureNoLocaleConfigured.png"></p>
+</div>
 </div>
 </div>
 
