--- a/output/index.html
+++ b/output/index.html
@@ -72,10 +72,10 @@
         </div>
     </header><div class="e-content entry-content">
     <div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1">First post on Nikola</h2>
+<h2 id="sec-1">Original post on Nikola</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-Thanks and comments on how to install static website generator. <a href="https://streakycobra.github.io/posts/blogging-in-org-mode-with-nikola/">Blogging in Org Mode With Nikola</a>
+Thanks to Fabien Dubosson. <a href="https://streakycobra.github.io/posts/blogging-in-org-mode-with-nikola/">Blogging in Org Mode With Nikola</a>
 </p>
 </div>
 </div>
